# fountain-engine-improved

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  TODO.txt  downloadDepsAndRes.py
fountain/: CMakeLists.txt  fountain.cc  fountain.cpp  fountain.h
fountain/anime/: ActionAnime.cc  ActionAnime.h  Anime.cpp  Anime.h  CMakeLists.txt  FrameAnime.cc  FrameAnime.cpp  FrameAnime.h
fountain/audio/: Audio.cc  Audio.cpp  Audio.h  CMakeLists.txt  Source.cc  Source.cpp  Source.h
fountain/base/: CMakeLists.txt  ModuleBase.cpp  ModuleBase.h  NodeBase.cc  NodeBase.cpp  NodeBase.h  basedef.cc  basedef.cpp  basedef.h  fileUtil.cc  fileUtil.cpp  fileUtil.h  funcUtil.h  noncopyable.h  stringUtil.cc  stringUtil.h
fountain/control/: CMakeLists.txt  Control.cpp  Control.h  Joystick.cc  Joystick.cpp  Joystick.h
fountain/font/: CMakeLists.txt  Font.cpp  Font.h  FontCache.cc  FontCache.cpp  FontCache.h
fountain/interface/: CMakeLists.txt  Interface.cc  Interface.cpp  Interface.h  Window.cc  Window.cpp  Window.h
fountain/math/: CMakeLists.txt  Circle.cc  Circle.cpp  Circle.h  Polygon.cc  Polygon.cpp  Polygon.h  Rect.cc  Rect.cpp  Rect.h  Segment.cc  Segment.cpp  Segment.h  Shape.cc  Shape.cpp  Shape.h  Vec2.cc  Vec2.cpp  Vec2.h  Vec3.cc  Vec3.cpp  Vec3.h  Vec4.cc  Vec4.cpp  Vec4.h  coding.cc  coding.cpp  coding.h  hash.cc  hash.cpp  hash.h  mathdef.cc  mathdef.cpp  mathdef.h  random.cc  random.h
fountain/network/: CMakeLists.txt  TODO.txt
fountain/physics/: Body.cc  Body.cpp  Body.h  CMakeLists.txt  FixtureGroup.cc  FixtureGroup.cpp  FixtureGroup.h  Physics.cc  Physics.cpp  Physics.h
fountain/render/: CMakeLists.txt  Camera.cc  Camera.cpp  Camera.h  Color.cc  Color.cpp  Color.h  FountainRenderObj.cc  FountainRenderObj.h  FountainShader.cc  FountainShader.h  FountainShaderSource.cc  Image.cc  Image.cpp  Image.h  ImagePool.cc  ImagePool.cpp  ImagePool.h  Render.cc  Render.cpp  Render.h  RenderList.cc  RenderList.cpp  RenderList.h  RenderObj.cc  RenderObj.cpp  RenderObj.h  RenderTarget.cc  RenderTarget.h  RenderTree.cc  RenderTree.cpp  RenderTree.h  Shader.cc  Shader.cpp  Shader.h  ShapeObj.cc  ShapeObj.cpp  ShapeObj.h  Texture.cc  Texture.cpp  (+5 more)
fountain/scene/: CMakeLists.txt  Layer.cc  Layer.cpp  Layer.h  Scene.cc  Scene.cpp  Scene.h  SceneManager.cc  SceneManager.cpp  SceneManager.h
fountain/sprite/: CMakeLists.txt  Component.cc  Component.h  PhysicsSprite.cc  PhysicsSprite.h  Sprite.cc  Sprite.h  TODO.txt
fountain/time/: CMakeLists.txt  Clock.cc  Clock.cpp  Clock.h  PlayObj.cc  PlayObj.cpp  PlayObj.h  Time.cc  Time.cpp  Time.h  Timer.cc  Timer.h
fountain/ui/: Button.cc  Button.cpp  Button.h  CMakeLists.txt  Label.cc  Label.cpp  Label.h
fountain/util/: CMakeLists.txt  FSM.cc  FSM.cpp  FSM.h  PhysicsAnime.cc  PhysicsAnime.cpp  PhysicsAnime.h  TODO.txt  VimStyleCommandLabel.cc  VimStyleCommandLabel.h
tests/: CMakeLists.txt
tests/bug-tests/: CMakeLists.txt  TestApplication.cpp  TestApplication.h  TestScene.cpp  TestScene.h  test.rc
tests/empty-test/: CMakeLists.txt  main.cpp  test.rc
tests/fountain-tests/: Bomber.h  CMakeLists.txt  Charactor.cpp  Charactor.h  TestApplication.cpp  TestApplication.h  TestScene.cpp  TestScene.h  main.cpp
tests/stress-tests/: TODO.txt
tests/toposort-test/: CMakeLists.txt  TestApplication.cpp  TestApplication.h  TestScene.cpp  TestScene.h  main.cpp
tools/: CMakeLists.txt  fsmIncGen.py
tools/CollisionEditor/: CMakeLists.txt  editor.cc  editor.h  main.cc
tools/FSM-Editor/: :w  ButtonArrow.cpp  ButtonArrow.h  CMakeLists.txt  FSMEditor.h  FSMEditorScene.cpp  FSMEditorScene.h  main.cpp
tools/GeometryEditor/: CMakeLists.txt  EditorScene.cpp  EditorScene.h  main.cpp
tools/NormalTool/: CMakeLists.txt  main.cc  tool.cc  tool.h
